apps/speakr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speakr
  namespace: speakr
  labels:
    app: speakr
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "speakr.buildin.group"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8899
      targetPort: 8899
      protocol: TCP
  selector:
    app: speakr
