apps/speakr/asr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-asr
  namespace: speakr
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  rules:
    - host: whisper-asr.buildin.group
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whisper-asr
                port:
                  number: 9000
